--- a/back-end/package.json
+++ b/back-end/package.json
@@ -5,6 +5,7 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "mongoose": "^6.5.2"
   },
